Update text in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="card">
       <header>
         <h1>KNK-Ausgleich bei 50/50-Eigentum</h1>
-        <p class="sub">Linear wie im Excel-Sheet: ab Jahr&nbsp;11 wird jährlich <strong>10&nbsp;%</strong> der ursprünglichen Differenz abgezogen; Jahr&nbsp;20 ⇒ 0&nbsp;€.</p>
+        <p class="sub">Linear ab Jahr&nbsp;11 wird jährlich <strong>10&nbsp;%</strong> der ursprünglichen Differenz abgezogen; Jahr&nbsp;20 ⇒ 0&nbsp;€.</p>
       </header>
 
       <form class="grid" onsubmit="event.preventDefault()">
